optimize InduceByAdhocComplete DAG construction, clarify IGroupBy order semantic, FilterOptimized applies on clusters on filters